@@ -35,12 +35,10 @@ ICS;
             $it->next();
         }
 
-        // If we got here, it means we were successful. The bug that was in teh 
-        // system before would fail on the 5th tuesday of the month, if the 5th 
+        // If we got here, it means we were successful. The bug that was in the
+        // system before would fail on the 5th tuesday of the month, if the 5th
         // tuesday did not exist.
-       
+
     }
 
 }
-
-?>
